# anvil-openarm-mujoco

./: .dockerignore  .gitignore  .gitmodules  LICENSE  README.md  anvil_openarm_spec.py  pyproject.toml
.github/workflows/: pages.yml  pytest.yml
bridge/: __init__.py  ros2_bridge.py  sim_core.py
cad/: anvil_openarm2_wrist_bracket_source.step  anvil_wrist_bracket.py  anvil_wrist_bracket.step
docker/: Dockerfile  Dockerfile.ros2-test
docs/: TESTING.md
models/: anvil_cell.xml  anvil_demo.xml  anvil_openarm_bimanual.urdf  anvil_openarm_bimanual.xml  anvil_pedestal.xml
models/assets/: anvil_wrist_bracket.stl
scripts/: check_model.py  common.py  demo_wrist_sweep.py  export_web_assets.py  make_anvil_model.py  make_anvil_urdf.py  run_docker.sh  run_ros2_tests.sh  view.py
tests/: test_check_model.py  test_export_web_assets.py  test_model_generation.py  test_ros2_bridge.py  test_sim_core.py  test_urdf_generation.py  test_web_scene.py
web/: index.html  package-lock.json  package.json
web/src/: demos.ts  loaderProfiles.ts  main.ts  mujocoAssets.ts  simulator.ts  styles.css
