[project]
name = "anvil-openarm-mujoco"
version = "0.1.0"
description = "MuJoCo simulation workspace for the Anvil OpenARM 2.0 (extended-wrist variant of OpenArm v2)"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "mujoco>=3.6.0",
    "mujoco-python-viewer>=0.1.4",
    "numpy",
]

[dependency-groups]
dev = ["pytest>=8,<9"]

[tool.uv]
package = false
